# macro-pulse-chile

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  Macro_Pulse_Chile.7z  README.md  init_structure.py  main.py  pyproject.toml  requirements.txt  test_bcch.py  test_db.py  test_fred.py  test_wb.py
.codex/: config.toml
.github/workflows/: ci.yml
app/ui/: cache.py  compare.py  report.py  series.py
docs/: PROJECT_CONTEXT.md  documento_maestro_macro_pulse_chile.docx
macro_pulse_chile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/config/: catalog.py
src/connectors/: bcch.py  cmf.py  datos_gob.py  fred.py  world_bank.py
src/domain/: models.py
src/macro_pulse_chile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: ci.yml  data_manager.py
src/storage/: local_db.py
src/transform/: frequencies.py  variations.py
tests/: test_bcch.py  test_catalog.py  test_cmf.py  test_cmf_connector.py  test_datos_gob.py  test_db.py  test_fred.py  test_wb.py
